Makefile detects OS and generates corresponding libraries (Linux/MacOS supported

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,20 +1,48 @@
+AR       := ar
+ARFLAGS  := -r -c -s
 CXX      := g++
-CXXFLAGS := -Wall -Wextra -pedantic -std=c++03
-LDFLAGS  := -lz
-SRC      :=$(wildcard ./*.cpp)
+CXXFLAGS := -Wall -Wextra -pedantic -std=c++03 -fPIC
+LDFLAGS  :=
+LIBS     := -lz
+SRC      := $(wildcard ./*.cpp)
 OBJDIR   := ./obj
-BINDIR   := ./bin
+LIBDIR   := ./lib
 
 obj_of_src = $(addprefix $(OBJDIR)/, $(1:%.cpp=%.o))
 
-OBJ      :=$(call obj_of_src,$(SRC))
-BIN      := $(BINDIR)/test
+OBJ      := $(call obj_of_src,$(SRC))
+LIBNAME  := smfp
+
+STATLIB  := $(LIBDIR)/$(LIBNAME).a
+ifeq ($(OS),Windows_NT)
+	$(error Windows compilation not supported yet)
+else
+	UNAME := $(shell uname -s)
+	ifeq ($(UNAME),Darwin) # OSX
+		SONAME_OPTION := -install_name
+		DYNLIB        := $(LIBDIR)/$(LIBNAME).dylib
+	else ifeq ($(UNAME),Linux) # Linux
+		SONAME_OPTION := -soname
+		DYNLIB        := $(LIBDIR)/$(LIBNAME).so
+	else # Unknown
+		$(error Makefile couldn't recognize operating system)
+	endif
+endif
 
 .PHONY: all clean
 
-all: $(BIN)
+all: static dynamic
 
-$(BINDIR) $(OBJDIR):
+dynamic: $(DYNLIB)
+static: $(STATLIB)
+
+$(DYNLIB): $(OBJ) | $(LIBDIR)
+	$(CXX) $(LDFLAGS) -shared -Wl,$(SONAME_OPTION),$(notdir $@) -o $@ $^ $(LIBS)
+
+$(STATLIB): $(OBJ) | $(LIBDIR)
+	$(AR) $(ARFLAGS) $@ $?
+
+$(LIBDIR) $(OBJDIR):
 	mkdir -p $@
 
 define obj_rule_tpl
@@ -26,8 +54,5 @@ $(foreach source, $(SRC), \
     $(eval $(call obj_rule_tpl,$(source))) \
  )
 
-$(BIN): $(OBJ) | $(BINDIR)
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $^
-
 clean:
-	rm -rf $(OBJDIR) $(BINDIR)
+	rm -rf $(OBJDIR) $(LIBDIR)
